@@ -5,3 +5,4 @@ ividz - fix listing, categories
 WhoresTube - new site
 Settings - added option to play m3u8 streams with Inputstream Adaptive
 JavGG - new site
+xhamster - fix categories
